[gd_scene load_steps=8 format=3 uid="uid://drhbrvcs5v2t7"]

[ext_resource type="Script" path="res://Interfaces/item_box.gd" id="1_ewtao"]
[ext_resource type="Script" path="res://Interfaces/aspectratio_bodge.gd" id="2_x0sh1"]
[ext_resource type="Texture2D" uid="uid://8u405h5e6yoq" path="res://Interface Assets/null.png" id="3_gvqy4"]
[ext_resource type="Script" path="res://Interfaces/ui_shake.gd" id="5_4lu34"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7532e"]
bg_color = Color(0.166667, 0.16, 0.2, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n1x8a"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1rdg1"]
border_color = Color(0.5, 0.5, 0.5, 1)

[node name="Module" type="PanelContainer"]
custom_minimum_size = Vector2(16, 0)
offset_right = 310.0
offset_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_ewtao")
weapon_slot = 0

[node name="IconMargin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="IconMargin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="AspectRatioFixed" type="AspectRatioContainer" parent="IconMargin/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
script = ExtResource("2_x0sh1")

[node name="Panel" type="PanelContainer" parent="IconMargin/HBoxContainer/AspectRatioFixed"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7532e")

[node name="MarginContainer" type="MarginContainer" parent="IconMargin/HBoxContainer/AspectRatioFixed/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="TextureRect" type="TextureRect" parent="IconMargin/HBoxContainer/AspectRatioFixed/Panel/MarginContainer"]
layout_mode = 2
texture = ExtResource("3_gvqy4")
expand_mode = 1

[node name="Stripe" type="Panel" parent="IconMargin/HBoxContainer"]
self_modulate = Color(0.9, 0.27, 0.27, 1)
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n1x8a")

[node name="VBoxContainer" type="VBoxContainer" parent="IconMargin/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="RichTextLabel" parent="IconMargin/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "aoaooaoa"
fit_content = true

[node name="Panel" type="Panel" parent="IconMargin/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1rdg1")

[node name="Info" type="RichTextLabel" parent="IconMargin/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
bbcode_enabled = true
fit_content = true

[node name="UiShake" type="Node" parent="."]
script = ExtResource("5_4lu34")
stretch = 1.1
twist = 5.0
time = 0.5
looping_twist = 1.5
looping_time = 3.0
